Add h2 db sample

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>1.4.200</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-agroal</artifactId>
+            <version>5.4.2.Final</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <build>
